@@ -2,6 +2,7 @@
 v3.3.0-git
 ----------
 
+[jan] Use Horde\ManageSieve instead of Net_Sieve.
 [mms] Rearrange the default order of filter rules.
 
 
